@@ -37,7 +37,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 	<groupId>edu.iu.util</groupId>
 	<artifactId>iu-java-parent</artifactId>
-	<version>7.0.0-SNAPSHOT</version>
+	<version>7.0.2-SNAPSHOT</version>
 
 	<packaging>pom</packaging>
 	<name>IU Java Utilities Parent POM</name>
@@ -55,7 +55,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<argLine>-ea --add-modules ALL-MODULE-PATH</argLine>
+		<argLine>-ea --add-modules ALL-MODULE-PATH -XX:+EnableDynamicAgentLoading</argLine>
+
+		<iu-java-util.version>7.0.2-SNAPSHOT</iu-java-util.version>
 
 		<jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
 		<jakarta.interceptor-api.version>2.1.0</jakarta.interceptor-api.version>
@@ -131,7 +133,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 						<configuration>
 							<rules>
 								<requireJavaVersion>
-									<version>20</version>
+									<version>21</version>
 								</requireJavaVersion>
 								<requireMavenVersion>
 									<version>3.8</version>
@@ -143,15 +145,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 			</plugin>
 			<plugin>
 				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>bundle-sources</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -159,6 +152,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
 			</plugin>
 		</plugins>
 
@@ -170,7 +166,23 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.1.2</version>
+					<version>3.2.2</version>
+				</plugin>
+				<plugin>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>3.2.2</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>integration-test</goal>
+								<goal>verify</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.6.0</version>
 				</plugin>
 				<plugin>
 					<artifactId>maven-ear-plugin</artifactId>
@@ -182,8 +194,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 					<configuration>
 						<archive>
 							<manifest>
-								<classpathPrefix>META-INF/lib</classpathPrefix>
 								<addExtensions>true</addExtensions>
+								<classpathPrefix>META-INF/lib</classpathPrefix>
 							</manifest>
 							<manifestEntries>
 								<Sealed>true</Sealed>
@@ -212,9 +224,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 					<executions>
 						<execution>
 							<id>default-source-jar</id>
-							<phase>package</phase>
+							<phase>process-classes</phase>
 							<goals>
-								<goal>jar</goal>
+								<goal>jar-no-fork</goal>
 							</goals>
 						</execution>
 					</executions>
@@ -224,7 +236,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 					<version>3.5.0</version>
 					<configuration>
 						<windowtitle>${project.name} ${project.version}</windowtitle>
-						<doctitle>${project.name} API Reference</doctitle>
+						<doctitle>${project.name}</doctitle>
 						<top><![CDATA[
 					<header class="rvt-header-wrapper">
 					  <div class="rvt-header-global">
@@ -329,16 +341,24 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 							<goals>
 								<goal>report</goal>
 							</goals>
-							<phase>test</phase>	
+ 							<configuration>
+								<excludes>
+									<exclude>**/*.jar</exclude>
+								</excludes>
+							</configuration>
+							<phase>verify</phase>	
 						</execution>
 						<execution>
 							<id>coverage-check</id>
 							<goals>
 								<goal>check</goal>
 							</goals>
-							<phase>test</phase>
+							<phase>verify</phase>
 							<configuration>
 								<haltOnFailure>true</haltOnFailure>
+								<excludes>
+									<exclude>**/*.jar</exclude>
+								</excludes>
 								<rules>
 									<rule>
 										<element>BUNDLE</element>
@@ -357,12 +377,6 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 									</rule>
 								</rules>
 							</configuration>
-						</execution>
-						<execution>
-							<id>coverage-aggregate</id>
-							<goals>
-								<goal>report-aggregate</goal>
-							</goals>
 						</execution>
 					</executions>
 				</plugin>
@@ -392,6 +406,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 										<artifactId>maven-dependency-plugin</artifactId>
 										<versionRange>[0,)</versionRange>
 										<goals>
+											<goal>copy</goal>
 											<goal>copy-dependencies</goal>
 										</goals>
 									</pluginExecutionFilter>
@@ -457,9 +472,20 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 				<module>docfiles</module>
 				<module>base</module>
 				<module>test</module>
+				<module>logging</module>
+				<module>jdbc</module>
 				<module>type</module>
 				<module>runtime</module>
 				<module>site</module>
+			</modules>
+		</profile>
+		<profile>
+			<id>scan</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<modules>
+				<module>scan</module>
 			</modules>
 		</profile>
 	</profiles>
